make my profile prettier

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <div class="card">
         <div class="card-second">
-          <h2>Social Links</h2>
+          <h2>Social Links 1</h2>
           <ul class = "list-inline">
             <li><a href="https://github.com/RicardoLuisAraujo" target="_blank"><i class="fab fa-github-square"></i></a></li>
             <li><a href="https://twitter.com/RicardoLuisAraujo" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
